--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 
 <body>
 
-  <h1>Your Name</h1>
+  <h1>jessica</h1>
 
-  <img src="https://placehold.it/200x200" alt="Your Name">
+  <img src="https://assets.nintendo.com/image/upload/c_pad,f_auto,h_613,q_auto,w_1089/ncom/en_US/games/switch/a/animal-crossing-new-horizons-switch/hero?v=2021052015" alt="Your Name">
 
-  <p>Write a short paragraph about yourself or some placeholder text.</p>
-  <p>A second short paragraph about yourself or some placeholder text.</p>
+  <p>My name is Jessica. This is my home page for my default website. This page contains no real information, just a bunch of stuff copied from other places. </p>
+  <p>i am water
+    soft enough
+    to offer life
+    tough enough
+    to drown it away
+    -rupi kaur
+  </p>
 
   <ul>
-    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+    <li><strong>Email:</strong> <a href="#">donotcontactme@gmail.com</a></li>
     <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+    <li><strong>Twitter:</strong> <a href="#">Erased becuase people are too sensitive</a></li>
   </ul>
 
   <table>
