--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
-            <li><a href="comparisons.html">Comparisons</a></li>
+            <li><a href="comparsions.html">Comparisons</a></li>
             <li><a href="data.html">Data</a></li>
               <li><a href="temperature.html">Temperature v. Latitude</a></li>
               <li><a href="humidity.html">Humidity v. Latitude</a></li>
