--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <li><a href="humidity.html">Humidity v. Latitude</a></li>
               <li><a href="cloudiness.html">Cloudiness v. Latitude</a></li>
               <li><a href="wind speed.html">Wind Speed v. Latitude</a></li>
+              <li><a href="biodiversity.html">Belly Button Biodiversity Dashboard</a></li>
         </li>
       </ul>
       </div>
