--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
-            <li><a href="comparsions.html">Comparisons</a></li>
-            <li><a href="data.html">Data</a></li>
-              <li><a href="temperature.html">Temperature v. Latitude</a></li>
-              <li><a href="humidity.html">Humidity v. Latitude</a></li>
-              <li><a href="cloudiness.html">Cloudiness v. Latitude</a></li>
-              <li><a href="wind speed.html">Wind Speed v. Latitude</a></li>
-              <li><a href="biodiversity.html">Belly Button Biodiversity Dashboard</a></li>
+            <li><a href="comparsions.html">About</a></li>
+            <li><a href="data.html">Professional Portfolio</a></li>
+              <li><a href="temperature.html">GitHub Repos</a></li>
         </li>
       </ul>
       </div>
@@ -30,7 +26,7 @@
   </nav>
 
   <header class="header">
-    <h1 style="font-size:8vw;">Latitude Analysis Dashboard</h1>
+    <h1 style="font-size:8vw;">This site is under construction! </h1>
   </header>
                                                                                                                                         </p>
 </body>
