--- a/index.html
+++ b/index.html
@@ -36,15 +36,8 @@
 
 <body>
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
-    <h1>Hi, I'm Jessica!</h1>
-    <h2>I am a Monitoring, Evaluation, Accountability, and Learning Professional</h2>
-    <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
-  </section><!-- End Hero -->
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center">
+<!-- ======= Header ======= -->
+<header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
@@ -67,6 +60,15 @@
     </div>
   </header><!-- End Header -->
 
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
+    <h1>Hi, I'm Jessica!</h1>
+    <h2>I am a Monitoring, Evaluation, Accountability, and Learning Professional</h2>
+    <!-- <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a> -->
+  </section><!-- End Hero -->
+
+  
+
   <main id="main">
 
     <!-- ======= About Section ======= -->
@@ -88,7 +90,7 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
                   <div class="count-box">
                     <i class="bi bi-emoji-smile"></i>
                     <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <p><strong>Happy Clients</strong> </p>
                   </div>
                 </div>
 
@@ -96,7 +98,7 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
                   <div class="count-box">
                     <i class="bi bi-journal-richtext"></i>
                     <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                    <p><strong>Projects</strong> </p>
                   </div>
                 </div>
 
@@ -104,7 +106,7 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
                   <div class="count-box">
                     <i class="bi bi-clock"></i>
                     <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                    <p><strong>Years of experience</strong> </p>
                   </div>
                 </div>
 
@@ -112,7 +114,7 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
                   <div class="count-box">
                     <i class="bi bi-award"></i>
                     <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <p><strong>Awards</strong> </p>
                   </div>
                 </div>
               </div>
@@ -130,7 +132,7 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -138,31 +140,28 @@ She enjoys working with Tableau, Power BI, Python programming (Pandas, API Inter
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
               <h3>Jessica</h3>
-              <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+              <p></p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/jdoanes/" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="info">
-              <div class="d-flex align-items-center">
-                <i class="bi bi-geo-alt"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
-              </div>
+
 
               <div class="d-flex align-items-center mt-4">
                 <i class="bi bi-envelope"></i>
-                <p>info@example.com</p>
+                <p>jessicabdoanes@gmail.com</p>
               </div>
 
               <div class="d-flex align-items-center mt-4">
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 404 490 3311</p>
               </div>
 
             </div>
