--- a/biodiversity-dashboard-details.html
+++ b/biodiversity-dashboard-details.html
@@ -71,7 +71,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li>Portfolio Details</li>
+            <li>Belly Button Biodiversity</li>
           </ol>
         </div>
 
@@ -89,11 +89,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Biodiversity1.png" alt="">
-                </div>
+                    <img src="assets/img/portfolio/biodiversity0.jpeg" alt="">
+                  </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Biodiversity2.png" alt="">
+                  <img src="assets/img/portfolio/Biodiversity1.png" alt="">
                 </div>
 
 
@@ -108,7 +108,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Client</strong>: HTML, CSS</li>
                 <li><strong>Project date</strong>: 01 March, 2021</li>
                 <li><strong>GitHub Repo </strong>: <a href="https://github.com/jessicadoanes/web-design-challenge">https://github.com/jessicadoanes/web-design-challenge</a></li>
                 <li><strong>Project URL</strong>: <a href="https://jessicadoanes.github.io/web-design-challenge/">https://jessicadoanes.github.io/web-design-challenge/</a></li>
