--- a/project2-aviation-details.html
+++ b/project2-aviation-details.html
@@ -89,13 +89,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Project2_1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Project2_2.png" alt="">
-                </div>
-
+                    <img src="assets/img/portfolio/project2-plane.webp" alt="">
+                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -107,16 +102,16 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2021</li>
-                <li><strong>GitHub Repo </strong>: <a href="https://github.com/jessicadoanes/web-design-challenge">https://github.com/jessicadoanes/web-design-challenge</a></li>
-                <li><strong>Project URL</strong>: <a href="https://jessicadoanes.github.io/web-design-challenge/">https://jessicadoanes.github.io/web-design-challenge/</a></li>
+                <li><strong>Tools</strong>: ASU Company</li>
+                <li><strong>Project date</strong>: July 22, 2021</li>
+                <li><strong>GitHub Repo </strong>: <a href="https://github.com/jessicadoanes/Project2_A2">https://github.com/jessicadoanes/Project2_A2</a></li>
+                <li><strong>Project URL</strong>: <a href="https://jessicadoanes.github.io/Project2_A2/index.html">https://jessicadoanes.github.io/Project2_A2/index.html</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This website was created to satisfy the requirements of Project 2 for GA Tech's Data Science and Analytics certifcate program. We sought to create a website with four dynamic visualizations analyzing aviation crashes from 1908 to 2009.
               </p>
             </div>
           </div>
