--- a/web_scrape.html
+++ b/web_scrape.html
@@ -71,7 +71,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li>Portfolio Details</li>
+            <li>NASA Mars Web Scrape Challenge</li>
           </ol>
         </div>
 
@@ -87,10 +87,6 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/web_scrape0.png" alt="">
-                </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/web_scrape1.jpeg" alt="">
@@ -117,9 +113,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2021</li>
+                <li><strong>Category</strong>: Web Technologies</li>
+                <li><strong>Tools</strong>: MongoDB</li>
+                <li><strong>Project date</strong>: June 3, 2021</li>
                 <li><strong>GitHub Repo </strong>: <a href="https://github.com/jessicadoanes/web-design-challenge">https://github.com/jessicadoanes/web-design-challenge</a></li>
                 <li><strong>Project URL</strong>: <a href="https://jessicadoanes.github.io/web-design-challenge/">https://jessicadoanes.github.io/web-design-challenge/</a></li>
               </ul>
@@ -127,7 +123,7 @@
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                In the NASA Mars Web Scrape Challenge, I was tasked with scraping news articles and images from the <a href="https://redplanetscience.com/">Mars News site</a>. 
               </p>
             </div>
           </div>
