--- a/latitude-analysis-details.html
+++ b/latitude-analysis-details.html
@@ -71,7 +71,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li>Portfolio Details</li>
+            <li>Latitude Analysis Dashboard</li>
           </ol>
         </div>
 
